# shelper

./: .gitignore  CMakeLists.txt  Main.storyboard
common_libs/curl/: CMakeLists.txt  curl_config.h.in  curlbuild.h.in.garbage
common_libs/curl/curl-7.64.1/include/curl/: curl_config.h
common_libs/curlpp-0.8.1/: CMakeLists.txt
common_libs/zlib/: CMakeLists.txt
common_libs/zlib/zlib-1.2.5/: CMakeLists.txt  gzguts.h
shelper/: CMakeLists.txt
shelper/assets/: shawshank.srt
shelper/src/: app.cpp  app.h  defs.h  downloader.cpp  downloader.h  interop_mgr.cpp  interop_mgr.h  main.cpp  output.h  strict_fstream.hpp  time_routines.h  view.h
shelper/src/fs/: file_system.h  posix_file_system.cpp  posix_file_system.h
shelper/src/media_center/: media_center.cpp  media_center.h
shelper/src/media_center/adapters/: kodi_adapter.cpp  kodi_adapter.h
shelper/src/output/: output.h
shelper/src/output/adapters/: console_output.h
shelper/src/platform/ios/: AppDelegate.h  AppDelegate.mm  Info.plist  SceneDelegate.h  SelectSubVC.h  SelectSubVC.mm  ViewController.h  ViewController.mm  main.mm
shelper/src/platform/ios/Base.lproj/: Main.storyboard
shelper/src/platform/osx/: AppDelegate.h  AppDelegate.mm  Info.plist  SettingsViewController.h  SettingsViewController.mm  ViewController.h  ViewController.mm  main.mm
shelper/src/platform/osx/Base.lproj/: Main.storyboard
shelper/src/subtitles/: fetcher.cpp  fetcher.h  subtitles.cpp  subtitles.h
shelper/src/translator/: translator.h
shelper/src/translator/adapters/: lingualeo.cpp
